Impl: some client keys adding improvements
